--- a/src/package.json
+++ b/src/package.json
@@ -1,3 +1,7 @@
 {
-    "type": "module"
+    "type": "module",
+    "dependencies": {
+        "fs": "^0.0.1-security",
+        "puppeteer": "^22.5.0"
+    }
 }
