--- a/py_version/requirements.txt
+++ b/py_version/requirements.txt
@@ -1,7 +1,6 @@
 beautifulsoup4==4.12.3
-matplotlib==3.9.2
-numpy==2.0.0
+numpy==2.2.1
+openpyxl==3.1.5
 pandas==2.2.3
-pyppeteer==2.0.0
 Requests==2.32.3
-selenium==4.25.0
+selenium==4.27.1
